add log, add register/unregister